--- a/Reports-Service/src/main/resources/application.properties
+++ b/Reports-Service/src/main/resources/application.properties
@@ -1,22 +1,22 @@
 spring.application.name=Reports-Service
 server.port=8085
 
+# DataSource dummy para satisfacer Spring Boot (H2 en memoria)
+spring.datasource.url=jdbc:h2:mem:dummydb
+spring.datasource.driver-class-name=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
+
+# Deshabilitar JPA completamente
+spring.jpa.hibernate.ddl-auto=none
+spring.jpa.show-sql=false
+spring.jpa.open-in-view=false
+
 # Services URLs (for Docker network)
-# These can be overridden via environment variables
 services.catalog.url=${SERVICES_CATALOG_URL:http://catalog-service:8081}
 services.inventory.url=${SERVICES_INVENTORY_URL:http://inventory-service:8083}
 services.sales.url=${SERVICES_SALES_URL:http://sales-service:8084}
 services.customer.url=${SERVICES_CUSTOMER_URL:http://customer-service:8082}
-
-# Database Configuration (opcional, si Reports-Service necesita BD propia)
-# spring.datasource.url=jdbc:mysql://reports-db:3306/reports_db?createDatabaseIfNotExist=true&useSSL=false&serverTimezone=UTC
-# spring.datasource.username=root
-# spring.datasource.password=rootpassword
-# spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-
-# JPA Configuration
-# spring.jpa.hibernate.ddl-auto=update
-# spring.jpa.show-sql=true
 
 # Logging
 logging.level.org.springframework.web=INFO
