--- a/Inventory-Service/src/main/resources/application.properties
+++ b/Inventory-Service/src/main/resources/application.properties
@@ -1,18 +1,18 @@
 spring.application.name=Inventory-Service
-server.port=8083
+server.port=${INVENTORY_SERVICE_PORT:8083}
 
 # Database Configuration
-spring.datasource.url=jdbc:mysql://inventory-db:3306/inventory_db?createDatabaseIfNotExist=true&useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
-spring.datasource.username=root
-spring.datasource.password=rootpassword
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=${INVENTORY_DB_URL:jdbc:mysql://inventory-db:3306/inventory_db?createDatabaseIfNotExist=true&useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true}
+spring.datasource.username=${INVENTORY_DB_USERNAME:root}
+spring.datasource.password=${INVENTORY_DB_PASSWORD:rootpassword}
+spring.datasource.driver-class-name=${INVENTORY_DB_DRIVER:com.mysql.cj.jdbc.Driver}
 
 # JPA Configuration
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
-spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.hibernate.ddl-auto=${INVENTORY_JPA_DDL_AUTO:update}
+spring.jpa.show-sql=${INVENTORY_JPA_SHOW_SQL:true}
+spring.jpa.properties.hibernate.dialect=${INVENTORY_JPA_DIALECT:org.hibernate.dialect.MySQLDialect}
+spring.jpa.properties.hibernate.format_sql=${INVENTORY_JPA_FORMAT_SQL:true}
 
 # Logging
-logging.level.org.springframework.web=INFO
-logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.springframework.web=${INVENTORY_LOG_WEB:INFO}
+logging.level.org.hibernate.SQL=${INVENTORY_LOG_SQL:DEBUG}
