--- a/Reports-Service/src/main/resources/application.properties
+++ b/Reports-Service/src/main/resources/application.properties
@@ -1,16 +1,16 @@
 spring.application.name=Reports-Service
-server.port=8085
+server.port=${REPORTS_SERVICE_PORT:8085}
 
 # DataSource dummy para satisfacer Spring Boot (H2 en memoria)
-spring.datasource.url=jdbc:h2:mem:dummydb
-spring.datasource.driver-class-name=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=
+spring.datasource.url=${REPORTS_DATASOURCE_URL:jdbc:h2:mem:dummydb}
+spring.datasource.driver-class-name=${REPORTS_DATASOURCE_DRIVER:org.h2.Driver}
+spring.datasource.username=${REPORTS_DATASOURCE_USERNAME:sa}
+spring.datasource.password=${REPORTS_DATASOURCE_PASSWORD:}
 
 # Deshabilitar JPA completamente
-spring.jpa.hibernate.ddl-auto=none
-spring.jpa.show-sql=false
-spring.jpa.open-in-view=false
+spring.jpa.hibernate.ddl-auto=${REPORTS_JPA_DDL_AUTO:none}
+spring.jpa.show-sql=${REPORTS_JPA_SHOW_SQL:false}
+spring.jpa.open-in-view=${REPORTS_JPA_OPEN_IN_VIEW:false}
 
 # Services URLs (for Docker network)
 services.catalog.url=${SERVICES_CATALOG_URL:http://catalog-service:8081}
@@ -19,4 +19,4 @@ services.sales.url=${SERVICES_SALES_URL:http://sales-service:8084}
 services.customer.url=${SERVICES_CUSTOMER_URL:http://customer-service:8082}
 
 # Logging
-logging.level.org.springframework.web=INFO
+logging.level.org.springframework.web=${REPORTS_LOG_WEB:INFO}
