--- a/Sales-Service/src/main/resources/application.properties
+++ b/Sales-Service/src/main/resources/application.properties
@@ -1,18 +1,18 @@
 spring.application.name=Sales-Service
-server.port=8084
+server.port=${SALES_SERVICE_PORT:8084}
 
 # Database Configuration
-spring.datasource.url=jdbc:mysql://sales-db:3306/sales_db?createDatabaseIfNotExist=true&useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
-spring.datasource.username=root
-spring.datasource.password=rootpassword
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=${SALES_DB_URL:jdbc:mysql://sales-db:3306/sales_db?createDatabaseIfNotExist=true&useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true}
+spring.datasource.username=${SALES_DB_USERNAME:root}
+spring.datasource.password=${SALES_DB_PASSWORD:rootpassword}
+spring.datasource.driver-class-name=${SALES_DB_DRIVER:com.mysql.cj.jdbc.Driver}
 
 # JPA Configuration
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
-spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.hibernate.ddl-auto=${SALES_JPA_DDL_AUTO:update}
+spring.jpa.show-sql=${SALES_JPA_SHOW_SQL:true}
+spring.jpa.properties.hibernate.dialect=${SALES_JPA_DIALECT:org.hibernate.dialect.MySQLDialect}
+spring.jpa.properties.hibernate.format_sql=${SALES_JPA_FORMAT_SQL:true}
 
 # Logging
-logging.level.org.springframework.web=INFO
-logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.springframework.web=${SALES_LOG_WEB:INFO}
+logging.level.org.hibernate.SQL=${SALES_LOG_SQL:DEBUG}
