--- a/Catalog-Service/src/main/resources/application.properties
+++ b/Catalog-Service/src/main/resources/application.properties
@@ -1,18 +1,18 @@
 spring.application.name=Catalog-Service
-server.port=8081
+server.port=${CATALOG_SERVICE_PORT:8081}
 
 # Database Configuration
-spring.datasource.url=jdbc:mysql://catalog-db:3306/catalog_db?createDatabaseIfNotExist=true&useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
-spring.datasource.username=root
-spring.datasource.password=rootpassword
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=${CATALOG_DB_URL:jdbc:mysql://catalog-db:3306/catalog_db?createDatabaseIfNotExist=true&useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true}
+spring.datasource.username=${CATALOG_DB_USERNAME:root}
+spring.datasource.password=${CATALOG_DB_PASSWORD:rootpassword}
+spring.datasource.driver-class-name=${CATALOG_DB_DRIVER:com.mysql.cj.jdbc.Driver}
 
 # JPA Configuration
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
-spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.hibernate.ddl-auto=${CATALOG_JPA_DDL_AUTO:update}
+spring.jpa.show-sql=${CATALOG_JPA_SHOW_SQL:true}
+spring.jpa.properties.hibernate.dialect=${CATALOG_JPA_DIALECT:org.hibernate.dialect.MySQLDialect}
+spring.jpa.properties.hibernate.format_sql=${CATALOG_JPA_FORMAT_SQL:true}
 
 # Logging
-logging.level.org.springframework.web=INFO
-logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.springframework.web=${CATALOG_LOG_WEB:INFO}
+logging.level.org.hibernate.SQL=${CATALOG_LOG_SQL:DEBUG}
