--- a/Customer-Service/src/main/resources/application.properties
+++ b/Customer-Service/src/main/resources/application.properties
@@ -1,18 +1,18 @@
 spring.application.name=Customer-Service
-server.port=8082
+server.port=${CUSTOMER_SERVICE_PORT:8082}
 
 # Database Configuration
-spring.datasource.url=jdbc:mysql://customer-db:3306/customer_db?createDatabaseIfNotExist=true&useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
-spring.datasource.username=root
-spring.datasource.password=rootpassword
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=${CUSTOMER_DB_URL:jdbc:mysql://customer-db:3306/customer_db?createDatabaseIfNotExist=true&useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true}
+spring.datasource.username=${CUSTOMER_DB_USERNAME:root}
+spring.datasource.password=${CUSTOMER_DB_PASSWORD:rootpassword}
+spring.datasource.driver-class-name=${CUSTOMER_DB_DRIVER:com.mysql.cj.jdbc.Driver}
 
 # JPA Configuration
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
-spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.hibernate.ddl-auto=${CUSTOMER_JPA_DDL_AUTO:update}
+spring.jpa.show-sql=${CUSTOMER_JPA_SHOW_SQL:true}
+spring.jpa.properties.hibernate.dialect=${CUSTOMER_JPA_DIALECT:org.hibernate.dialect.MySQLDialect}
+spring.jpa.properties.hibernate.format_sql=${CUSTOMER_JPA_FORMAT_SQL:true}
 
 # Logging
-logging.level.org.springframework.web=INFO
-logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.springframework.web=${CUSTOMER_LOG_WEB:INFO}
+logging.level.org.hibernate.SQL=${CUSTOMER_LOG_SQL:DEBUG}
